--- a/index.html
+++ b/index.html
@@ -1,20 +1,25 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <meta charset="UTF-8">
-        <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-        <link rel="stylesheet" href="css/reset.css">
-        <link rel="stylesheet" href="css/countries.css">
-        
-        <title>countries</title>
-    </head>
-    <body>
-        <h1>Countries</h1>
+    <link rel="stylesheet" href="css/reset.css" />
+    <link rel="stylesheet" href="css/countries.css" />
 
-        <script src="lib/axios.js"></script>
-        
-        <script src="js/country.controller.js"></script>
-    </body>
+    <title>countries</title>
+  </head>
+  <body>
+    <h1>Countries</h1>
+
+    <input type="search" name="search" id="" ">
+    <button onclick="getCountries()">search</button>
+    <pre></pre>
+
+    <script src="lib/axios.js"></script>
+    <script src="js/services/storage.service.js"></script>
+    <script src="js/services/country.service.js"></script>
+    <script src="js/country.controller.js"></script>
+  </body>
 </html>
